@@ -1,143 +1,81 @@
-c 
-c  The input for Raman consists of two pieces:
-c     - a standard phonon input
-c          IMPORTANT: the variable drho must be set
-c                     as in the electric-field calculation
-c          I recommend to use the same input card as in
-c          the electric-field calculation
-c
-c     - the raman input
-c
-c
-c
-c
-c   First a standard phonon input:
-c   ==============================
-c
-c
-c   phonon input cards are as follows:
-c
-c card 1   title_ph
-c
-c                    namelist "inputph"
-c
-cc  variable             meaning                              default value
-c
-c*********     Variables that MUST BE SPECIFIED      ********** 
-c
-c amass(ntyp) atomic mass of each atomic type 
-c
-c*********           Optional Variables              **********
-c
-c outdir      scratch directory                                     './'
-c
-c prefix      prepended to input/output filenames                'pwscf'
-c             must be the same used in the calculation
-c             of unperturbed system
-c
-c niter_ph    maximum number of iterations in a scf step             50
-c
-c tr2_ph      threshold for selfconsistency                        1e-10
-c
-c alpha_mix(niter) mixing factor (for each iteration) for   alpha_mix(1)=0.7
-c             updating the scf potential:
-c             vnew(in) = alpha_mix*vold(out) + (1-alpha_mix)*vold(in)
-c nmix_ph     number of iterations used in potential mixing          4
-c
-c iverbosity  iverbosity=0 short output, iverbosity=1 verbose output 0
-c
-c time_max    maximum allowed run time before the job stops smoothly
-c
-c fildyn      file where the dynamical matrix is written           'matdyn'
-c
-c fildrho     file where the charge density variations is written     ' '
-c
-c filelph     file where electron-phonon matrix elements are written  ' '
-c
-c fildvscf    file where the the potential variation is written       ' '
-c             (for later use in electron-phonon calculation)
-c
-c maxirr      maximum number of irreducible representation to be      0 i.e. all
-c             computed in a single run 
-c
-c epsil       if .true. in a q=0 calculation for a non metal the      .false.
-c             macroscopic dielectric constant of the system is 
-c             computed. 
-c
-c trans       if .true. the phonons are computed                      .true.
-c             If trans.and.epsil effective charges are calculated            
-c
-c elph        if .true. electron-phonon lambda coeffs are computed    .false.
-c             For metals only, requires gaussian smearing.
-c             If elph.and.trans, the lambdas are calculated in the same
-c             run, using the same k-point grid for phonons and lambdas
-c             If elph.and..not.trans, the lambdas are calculated using
-c             previously saved DeltaVscf in fildvscf, previously saved
-c             dynamical matrix, and the present punch file. This allows
-c             the use of a different (larger) k-point grid.
-c
-c zue         if .true. in a q=0 calculation for a non metal the 
-c             effective charges are computed from the phonon
-c             density responses. Note that if trans.and.epsil
-c             effective charges are calculated using a different
-c             algorithm. The results should be the same within
-c             numerical noise.
 
-c                    End of namelist "inputph"
-c
-c card 2   xq(3)   the phonon wavevector; must be equal to the one used
-c                  in the non-selfconsistent calculation.
-c                  MUST BE 0.0 0.0 0.0 FOR RAMAN                  
-c
-c
-c
-c          For calculation of the raman tensors
-c
-c
-c     namelist inputram
-c              ========
-c
-c
-c b_length :    length of the b vector to be used for evaluating finite
-c               differences. Default 0.0. MUST BE SPECIFIED.
-c
-c lcart :       logical, define whether the finite differences are
-c               taken along cartesian axis (.true.) or in directions
-c               of the next neighboring k points. 
-c               Default: .true.
-c
-c lsus :        logical, defines whether the nonlinear susceptibility 
-c               is calculated.
-c               Default: .false.
-c
-c lram :        logical, defines whether the Raman tensor is calcuated.
-c               default: .false.
-c
-c lboth :       logical, if .true. the finite differences are calculated
-c               by taking the values at k+b and k-b
-c               default: .true.
-c
-c lelfield :    logical, if .true. the finite differences are calculated
-c               by taking the values of the perturbed wavefunctions of
-c               the electric field at the points k+b, while the perturbed
-c               wavefunctions with the atomic displacement is just
-c               taken at the points k.
-c               Default: .false.
-c    
-c latomic :     logical, like lelfield just with the finer mesh for the 
-c               atomic displacement and the original grid for the electric 
-c               field.
-c               default: .false.
-c
-c fildrhou :    File with the perturbed charge density with respect to an 
-c               atomic displacement.
-c               Default: ' ' 
-c
-c filsus :      File for the nonlinear susceptibility
-c               Default: 'nonl_suscept'
-c             
-c filram :      File for the Raman tensor
-c               Default: 'raman_tens'
-c
-c   
+A Raman/nonlinear susceptibility calculation requires the following steps:
+
+  - a simple scf calculation with pw.x
+
+  - a calculation of electric-field response with ph.x:
+    trans=.false., epsil=.true.
+    The output delta rho must be saved to a file, let us say 
+    fildrho='delta.rhoE'
+
+  - a phonon calculation at q=0 and no electric fields with ph.x:
+    trans=.true., epsil=.false.
+    The output delta rho must be saved to a file, let us say
+    fildrho='delta.rhoU' (must differ from fildrho of the previous step)
+
+  - a non-scf calculation with option calculation='raman' and with
+    appropriate values of b_length, lcart set in namelist &raman,
+    that follows all other namelists (see below for their meaning)
+
+  - finally, a calculation with ram.x
+    The setting of variables fildrho, fildrhou, b_length, lcart 
+    depends on the settings of the preceding step. 
+
+Variables outdir and prefix must be the same in all steps.
+
+The input data for ram.x is the same as for a phonon calculation,
+followed by a namelist "&inputram".
+
+  See file INPUT_PH for the first part of the input.
+  Note that fildrho, in namelist &inputph, must be the same as
+  specified in the ph.x electric field step (in the example above,
+  'delta.rhoE'), and xq must be set to 0.
+
+  namelist inputram
+           ========
+
+  b_length :    length of the b vector to be used for evaluating finite
+                differences. MUST BE SPECIFIED and must be the same as
+                specified in the calculation='raman' step of pw.x
+
+  lcart :       logical, define whether the finite differences are
+                taken along cartesian axis (.true.) or in directions
+                of the next neighboring k points. Must be the same as
+                pecified in the  calculation='raman' step of pw.x
+                Default: .true.
+ 
+  lsus :        logical, defines whether the nonlinear susceptibility 
+                is calculated.
+                Default: .false.
+ 
+  lram :        logical, defines whether the Raman tensor is calculated.
+                default: .false.
+ 
+  lboth :       logical, if .true. the finite differences are calculated
+                by taking the values at k+b and k-b
+                default: .true.
+ 
+  lelfield :    logical, if .true. the finite differences are calculated
+                by taking the values of the perturbed wavefunctions of
+                the electric field at the points k+b, while the perturbed
+                wavefunctions with the atomic displacement is just
+                taken at the points k.
+                Default: .false.
+     
+  latomic :     logical, like lelfield just with the finer mesh for the 
+                atomic displacement and the original grid for the electric 
+                field.
+                default: .false.
+ 
+  fildrhou :    File with the perturbed charge density with respect to an 
+                atomic displacement. Must be the same as spedified in the
+                ph.x phonon step (in the example above, 'delta.rhoU')
+                Default: ' ' 
+ 
+  filsus :      File for the nonlinear susceptibility
+                Default: 'nonl_suscept'
+              
+  filram :      File for the Raman tensor
+                Default: 'raman_tens'
+ 
  
